css/index.css
p {
  color: #292929;
  text-align: left;
  padding: 10px;
  font-family: Roboto;
  font-size:calc(14px + .5vw);
  line-height: 1.25em;
} 

a {
  text-decoration: none;
}

h1 {
  font-family: "Roboto-Bold";
  font-size:calc(20px + 2vw);
}

h2 {
  padding: 10px;
  font-family: "Roboto-Bold";
  font-size:calc(16px + 3vw);
}

h3 {
  font-family: "Roboto-Bold";
  font-size:calc(13px + 1vw);
}

* {
  margin: 0;
  padding: 0;
}

body {
  background-color: white;
  width: 100%;
  height: 100%;
}

html {
  width: 100%;
  height: 100%;
}

#header {
  background-color: white;
}

#top {
  position: relative;
  z-index: -1;
  height: 40%;
  min-height: 300px;
  background-color: white;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: top;
  flex-direction: column;
  font-size:calc(24px + 1vh);
  font-family: Roboto-Bold;
}

#top p {
  padding-bottom: 20px;
  color: #5983EF;
}

#holder {
  min-height: 100%;
  position: relative;
}

#mainContact {
  padding-bottom: 200px;
}

#mainPrivacy {
  font-family: "Roboto";
  padding-bottom: 150px;
}

#about {
  margin-top: 50px;
  display: flex;
  justify-content: left;
  align-items: center;
}

#topBox {
  width: 100%;
  display: flex;
  text-align: center;
}

.input {
  border: 2px solid #5983EF;
  border-radius: 10px;
  font-family: Roboto;
  padding: 10px;
}

#nameBox {
  width: 40%;
  display: flex;
  flex-direction: column;
  text-align: left;
}

#emailBox {
  display: flex;
  flex-direction: column;
  margin-left: auto;
  width: 40%;
}

#messageBox {
  margin-top: 50px;
  text-align: center;
  display: flex;
  flex-direction: column;
}

form {
  margin: 20px;
  width: 1000px;
}

#messageField {
  border: 2px solid #5983EF;
  border-radius: 10px;
  resize: none;
  padding: 10px;
  height: 300px;
  font-family: Roboto;
}

#aboutLeft {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #5983EF;
  width: 30%;
  text-align: center;
  height:calc(100px + 1vw);
  color: white;
  margin-right: 25px;
  font-family: Roboto-Bold;
  font-size: 24px;
}

#middle {
  padding-bottom: 200px;
}

#middle p {
  text-align: center;
}

#projBanner {
  margin-top: 100px;
  margin-bottom: 100px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: Roboto-Bold;
  height:calc(100px + 1vw);
  padding: 10px;
  font-family: "Roboto-Bold";
  font-size:calc(20px + 2vw);
  color: white;
  background-color: #5983EF;
  text-align: center;
}

#bigDisplay {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  margin: 20px;
}

.projWidget {
  width:calc(250px + 4vw);
  height:calc(500px + 4vh);
  background-color: #5983EF;
  color: white;
  border-radius: 20px;
  margin: 20px;
  padding: 10px;
  text-align: center;
  transition: all .2s ease-in-out;
  -webkit-transition: all .2s ease-in-out;
  -moz-transition: all .2s ease-in-out;
  -ms-transition: all .2s ease-in-out;
}

.projWidget:hover {
  transform: scale(1.05);
  -webkit-transform: scale(1.05);
  -moz-transform: scale(1.05);
  -ms-transform: scale(1.05);
}

#otherApps {
  display: flex;
  align-items: center;
  justify-content: center;
}

.projWidget p {
  color: white;
  padding: 20px;
  font-size:calc(15px + .75vh);
}

.projWidget img {
  width:calc(100px + 2vh);
  height: auto;
  border-radius: 20px;
  margin-top: 20px;
}

#aboutRight {
  width: 60%;
  text-align: center;
  padding: 20px;
}

#proj {
  display: flex;
  flex-wrap: nowrap;
  align-items: center;
  justify-content: center;
}

#projContainer {
  background-color: white;
  display: block;
  box-shadow: 0 0px 5px #5983EF;
  border-radius: 25px;
  color: #292929;
  margin: 20px;
  margin-top: -100px;
  
}

.projectImages {
  width:calc(50px + 1vw);
  height:calc(50px + 1vw);
  border-radius: 10px;
}

.homeIcons {
  transition: all .2s ease-in-out;
  -webkit-transition: all .2s ease-in-out;
  -moz-transition: all .2s ease-in-out;
  -ms-transition: all .2s ease-in-out;
  font-family: Roboto-Bold;
  text-align: center;
  margin: 0 -25px;
}

#bottom {
  bottom: 0;
  position: absolute;
  padding-top: 10px;
  padding-bottom: 10px;
  font-size: 16px;
  font-size:calc(16px + .5vh);
  overflow: hidden;
  background-color: #5983EF;
  min-height: 100px;
  height: 3vh;
  width: 100%;
}

#contactButton {
  display: inline;
  float: right;
  margin: 20px;
  border: 3px solid #5983EF;
  color: #292929;
  padding: 10px;
  background-color: white;
  border-radius: 10px;
  transition: all .2s ease-in-out;
  -webkit-transition: all .2s ease-in-out;
  -moz-transition: all .2s ease-in-out;
  -ms-transition: all .2s ease-in-out;
  font-family: Roboto-Bold;
  font-size: 13px;
}

.imgWidget {
  height: auto;
  width:calc(200px + 4vw);
  border-radius: 20px;
  margin: 20px;
}

#contactButton:hover {
  background-color: #5983EF;
  color: white;
}

.homeIcons {
  transition: all .2s ease-in-out;
  -webkit-transition: all .2s ease-in-out;
  -moz-transition: all .2s ease-in-out;
  -ms-transition: all .2s ease-in-out;
  padding: 5vw;
  font-size:calc(20px + 1vw);
  font-family: Roboto-Bold;
}

.homeIcons:hover {
  transform: scale(1.1);
  -webkit-transform: scale(1.1);
  -moz-transform: scale(1.1);
  -ms-transform: scale(1.1);
}

.footer {
  color: white;
  text-align: center; 
  font-size:calc(10px + .5vh);; 
  font-family: Roboto;
  text-transform: uppercase;
  transition: all .2s ease-in-out;
  -webkit-transition: all .2s ease-in-out;
  -moz-transition: all .2s ease-in-out;
  -ms-transition: all .2s ease-in-out;
}

.footer :hover {
  transform: scale(1.1);
  -webkit-transform: scale(1.1);
  -moz-transform: scale(1.1);
  -ms-transform: scale(1.1);
}

.footer a {
  color: white;
  text-decoration: none;
}

label {
  font-family: Roboto;
  padding: 10px;
}

#aboutText {
  font-size:calc(14px + .5vw);
  line-height: 1.25em;
  padding: 20px;
}

ul {
  list-style-type: disc;
  list-style-position: inside;
  padding: 10px;
}

@media screen and (max-width: 800px) {

  #topBox {
    flex-direction: column;
  }

  .input {
    width: 90%;
  }

  #nameBox, #emailBox {
    width: 100%;
    align-items: center;
    justify-content: center;
  }

  #proj {
    flex-wrap: wrap;
  }

  #otherApps, #bigDisplay {
    flex-wrap: wrap;
  }

  #projContainer {
    margin-top: 250px;
  }

  .homeIcons {
    margin: 0;
  }

  #about {
    flex-wrap: wrap;
  }

  #aboutLeft {
    margin-right: 0;
    width: 100%;
  }
  
  #aboutRight {
    margin-top: 10px;
    width: 90%;
  }
}

